<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"

    tools:context=".practicing"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="491dp"
        android:layout_height="463dp"
        android:layout_marginLeft="-194dp"
        android:src="@drawable/x_thin_svgrepo_com" />

    <ImageView
        android:layout_width="500dp"
        android:layout_height="500dp"
        android:layout_alignRight="@+id/grid"
        android:layout_marginLeft="-194dp"
        android:layout_marginRight="-300dp"
        android:src="@drawable/medium_logo_thin_svgrepo_com" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_the_tick_tac_toe"
        android:textSize="20sp"
        android:fontFamily="sans-serif-black"
        android:layout_alignParentTop="true"
        android:textAlignment="center"

        />

    <TextView
        android:id="@+id/gamewon"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:fontFamily="sans-serif-black"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/game_won"
        android:textSize="20sp"


        />

    <GridLayout
        android:id="@+id/grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="36dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="15dp"
        android:columnCount="3"
        android:rowCount="3">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn1"
            android:layout_width="105dp"
            android:layout_height="58dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/black"
            android:fontFamily="sans-serif-black"
            android:onClick="Click_function"
            android:text="@string/space"
            android:textColor="@color/white" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn2"
            android:layout_width="105dp"
            android:layout_height="58dp"
            android:layout_margin="10dp"

            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"

            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/black"
            android:fontFamily="sans-serif-black"
            android:onClick="Click_function"
            android:text="@string/space"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn3"
            android:layout_width="105dp"
            android:layout_height="58dp"
            android:layout_margin="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"

            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/black"
            android:fontFamily="sans-serif-black"
            android:onClick="Click_function"
            android:text="@string/space"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn4"
            android:layout_width="105dp"
            android:layout_height="58dp"
            android:layout_margin="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"

            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/black"

            android:fontFamily="sans-serif-black"
            android:onClick="Click_function"
            android:text="@string/space"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn5"
            android:layout_width="105dp"
            android:layout_height="58dp"
            android:layout_margin="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/black"

            android:fontFamily="sans-serif-black"
            android:onClick="Click_function"

            android:text="@string/space"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn6"
            android:layout_width="105dp"
            android:layout_height="58dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"

            android:backgroundTint="@color/black"
            android:fontFamily="sans-serif-black"
            android:onClick="Click_function"
            android:text="@string/space"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn7"
            android:layout_width="105dp"
            android:layout_height="58dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/black"
            android:fontFamily="sans-serif-black"
            android:onClick="Click_function"
            android:text="@string/space"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn8"
            android:layout_width="105dp"
            android:layout_height="58dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"

            android:backgroundTint="@color/black"
            android:fontFamily="sans-serif-black"
            android:onClick="Click_function"
            android:text="@string/space"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn9"
            android:layout_width="105dp"
            android:layout_height="58dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/black"

            android:fontFamily="sans-serif-black"
            android:onClick="Click_function"
            android:text="@string/space"
            android:textColor="@color/white" />

    </GridLayout>

    <TextView
        android:id="@+id/turn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Turn:"
        android:fontFamily="sans-serif-black"
        android:textSize="20sp"
        android:layout_alignBottom="@+id/grid"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:layout_alignParentBottom="true"

        />
<TextView
    android:id="@+id/x"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="X:"
    android:fontFamily="sans-serif-black"
    android:textSize="20sp"
    android:layout_marginLeft="10dp"
    android:layout_alignBottom="@+id/gamewon"
    />

    <TextView
        android:id="@+id/o"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="O:"
        android:fontFamily="sans-serif-black"
        android:textSize="20sp"
        android:layout_alignBottom="@+id/gamewon"
        android:layout_marginLeft="10dp"
        android:paddingBottom="10dp"
        android:layout_marginBottom="20dp"
        />


</RelativeLayout>